# el_decko_core

./: README.md  pypi.sh  pyproject.toml
ed_core/: __init__.py  cache.py  config.py  core.py  dyn_data.py  query_deck.py  streamdeck.py  streamdeck_config.py
examples/: example_stream_ceck_config_file.json  example_stream_deck_config_file.json
