[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "el_decko_core"
dynamic = ["version"]
readme = "README.md"
description = "El Decko Core"
license = { text = "GPL-3"}
dependencies = [
    "streamdeck",
    "Pillow",
    "xdg; platform_system=='Linux'"
]

[project.optional-dependencies]
backends = ["el_decko_backend_obs_ws>=0.0.1"]

[project.scripts]
ed-core = "ed_core:run"

[project.entry-points."eldecko.core"]
start = "ed_core:run"
backends = "ed_core:backends"

[tool.setuptools.dynamic]
version = { attr = "ed_core.VERSION" }

[tool.setuptools]
include-package-data = true
platforms = ["Linux"]